1.19-yaml-files/ALB-Ingress-SSL-Redirect.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:xxxx:certificate/xxxxxx
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - http:
        paths:
         - path: /*
           pathType: Prefix
           backend:
             service:
               name: ssl-redirect
               port:
                 name: use-annotation
         - path: /users/*
           pathType: Prefix
           backend:
             service:
               name: user-service
               port:
                 number: 80
         - path: /*
           pathType: Prefix
           backend:
             service:
               name: default-service
               port:
                 number: 80
